--- a/src/main/webapp/CSS/stylesGestion.css
+++ b/src/main/webapp/CSS/stylesGestion.css
@@ -77,6 +77,19 @@ main{
   padding: 70px 30px;
 }
 
+.section3 {
+  width: 670px;
+  height: 350px;
+  background: rgba(5, 7, 12, 0.75);
+  color: #fff;
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-25%, -45%);
+  box-sizing: border-box;
+  padding: 170px 130px;
+}
+
 fieldset{
   background-color: transparent;
   width: 98%;
@@ -99,7 +112,8 @@ fieldset input[type="text"] {
 
 .gestion-usuarios input[name="nombre"], .gestion-usuarios input[name="cedula"],
  .gestion-usuarios input[name="email"], .gestion-usuarios input[name="usuario"],
- .gestion-usuarios input[name="clave"] {
+ .gestion-usuarios input[name="clave"], .gestion-usuarios input[name="dir_cli"],
+ .gestion-usuarios input[name="tel_cli"] {
   border: none;
   border-bottom: 1px solid #fff;
   background: transparent; 
