--- a/src/main/webapp/CSS/stylesGestion.css
+++ b/src/main/webapp/CSS/stylesGestion.css
@@ -113,7 +113,10 @@ fieldset input[type="text"] {
 .gestion-usuarios input[name="nombre"], .gestion-usuarios input[name="cedula"],
  .gestion-usuarios input[name="email"], .gestion-usuarios input[name="usuario"],
  .gestion-usuarios input[name="clave"], .gestion-usuarios input[name="dir_cli"],
- .gestion-usuarios input[name="tel_cli"] {
+ .gestion-usuarios input[name="tel_cli"], .gestion-usuarios input[name="nit"], 
+ .gestion-usuarios input[name="nombre"], .gestion-usuarios input[name="ciudad"],
+ .gestion-usuarios input[name="dir_prov"], .gestion-usuarios input[name="tel_prov"]{
+ 
   border: none;
   border-bottom: 1px solid #fff;
   background: transparent; 
@@ -166,5 +169,52 @@ fieldset input[type="text"] {
 .gestion-usuarios input[name="btnLimpiar"]:hover {
   cursor: pointer;
   background: #f9f168;
+  color: #000;
+}
+
+
+
+.section4 {
+  width: 470px;
+  height: 250px;
+  background: rgba(5, 7, 12, 0.75);
+  color: #fff;
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-35%, -65%);
+  box-sizing: border-box;
+  padding: 70px 30px;
+}
+
+.gestion-productos input[name="nomArchivo"] {
+  border: none;
+  border-bottom: 1px solid #fff;
+  background: transparent; 
+  outline: none;
+  height: 22px;
+  width: 40%;
+  margin: 0px 2px;
+  color: #fff;
+  font-size: 16px;
+}	
+
+ .gestion-productos input[name="btnCargar"] {
+  border: none;
+  outline: none;
+  height: 28px;
+  width: 140px;
+  background: #ffff80;
+  color: #000000;
+  font-size: 15px;
+  border-radius: 15px;
+  margin: 0px 2px;
+  box-shadow: 0px 2px 0px #808080;
+  
+}
+
+.gestion-productos input[name="btnCargar"]:hover {
+  cursor: pointer;
+  background: rgb(128, 255, 0);
   color: #000;
 }
